refactor(notebooks): reuse python code in scripts to load data

--- a/notebooks/sqw_qc_factor.ipynb
+++ b/notebooks/sqw_qc_factor.ipynb
@@ -5,26 +5,44 @@
    "execution_count": 1,
    "id": "64dcf395",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading width function data from file '/workspaces/h2o-sqw-calc/data/hydrogen_293k_gamma.h5'...\n",
+      "Width function data read completed.\n",
+      "Reading MD S(q,w) data from file '/workspaces/h2o-sqw-calc/data/h2o_293k_all.h5'...\n",
+      "MD S(q,w) data read completed.\n"
+     ]
+    }
+   ],
    "source": [
-    "%run load_gamma_data.ipynb\n",
-    "%run load_md_data.ipynb\n",
+    "import sys\n",
+    "from pathlib import Path\n",
     "\n",
-    "from typing import TYPE_CHECKING\n",
-    "\n",
-    "from numpy import float64\n",
+    "import numpy as np\n",
     "from numpy.typing import NDArray\n",
     "\n",
+    "from sqw.consts import HBAR, PI\n",
     "from sqw.typing import Array1D\n",
     "\n",
-    "if TYPE_CHECKING:\n",
-    "    time: Array1D[float64]\n",
-    "    gamma_qtm: Array1D[float64]\n",
-    "    gamma_cls: Array1D[float64]\n",
+    "sys.path.append(str(Path.cwd().parent / \"scripts\"))\n",
     "\n",
-    "    q_vals: Array1D[float64]\n",
-    "    omega_md: Array1D[float64]\n",
-    "    sqw_md_stack: NDArray[float64]"
+    "from utils.io import read_gamma_data, read_md_data\n",
+    "\n",
+    "GAMMA_KEYS = [\"time_vec\", \"gamma_qtm_real\", \"gamma_qtm_imag\", \"gamma_cls\"]\n",
+    "MD_KEYS = [\"qVec_H\", \"inc_omega_H\", \"inc_sqw_H\"]\n",
+    "\n",
+    "DATA_DIR = Path.cwd().parent / \"data\"\n",
+    "\n",
+    "GAMMA_FILE = DATA_DIR / \"hydrogen_293k_gamma.h5\"\n",
+    "MD_FILE = DATA_DIR / \"h2o_293k_all.h5\"\n",
+    "\n",
+    "time, gamma_qtm, gamma_cls = read_gamma_data(str(GAMMA_FILE), GAMMA_KEYS, no_extend=False, include_cls=True)\n",
+    "\n",
+    "q_vals, omega_md, raw_sqw_md_stack = read_md_data(str(MD_FILE), MD_KEYS, no_extend=False)\n",
+    "sqw_md_stack: NDArray[np.floating] = raw_sqw_md_stack * np.sqrt(2 * PI)"
    ]
   },
   {
@@ -46,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0cfce53405b42a89480850bb5c78fa6",
+       "model_id": "a0fd46e7d4134b8ba91888984087c8eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,15 +96,15 @@
     "MOMENTUM_TRANSFER = q_vals[Q_INDEX]  # in unit of Angstrom^-1\n",
     "\n",
     "\n",
-    "def ga_sisf(gamma: Array1D[float64], q: float) -> Array1D[float64]:\n",
+    "def ga_sisf[T: np.complexfloating](gamma: Array1D[T], q: float) -> Array1D[T]:\n",
     "    \"\"\"Get the Self-Intermediate Scattering Function (SISF) from the width\n",
     "    function under Gaussian approximation.\"\"\"\n",
     "    return np.exp(-0.5 * q**2 * gamma)\n",
     "\n",
     "\n",
     "sisf_qtm = ga_sisf(gamma_qtm, MOMENTUM_TRANSFER)\n",
-    "sisf_cls = ga_sisf(gamma_cls, MOMENTUM_TRANSFER)\n",
-    "sisf_qc = ga_sisf(gamma_qtm - gamma_cls, MOMENTUM_TRANSFER)\n",
+    "sisf_cls = ga_sisf(gamma_cls, MOMENTUM_TRANSFER)  # type: ignore\n",
+    "sisf_qc = ga_sisf(gamma_qtm - gamma_cls, MOMENTUM_TRANSFER)  # type: ignore\n",
     "\n",
     "plt.close(\"all\")\n",
     "plt.figure(figsize=(14, 5))\n",
@@ -121,7 +139,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cee4d2cfde34a4aa225e7231938f6af",
+       "model_id": "69c102992df64e1e8ddfc55610f0cce1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,9 +165,8 @@
    "source": [
     "# show the QC factor of scattering function\n",
     "from sqw import sqw_ga_model\n",
-    "from sqw.consts import HBAR\n",
     "\n",
-    "omega_qc, sqw_qc = sqw_ga_model(MOMENTUM_TRANSFER, time, gamma_qtm - gamma_cls, window=True)\n",
+    "omega_qc, sqw_qc = sqw_ga_model(MOMENTUM_TRANSFER, time, gamma_qtm - gamma_cls, window=True)  # type: ignore\n",
     "\n",
     "plt.figure()\n",
     "plt.plot(omega_qc * HBAR, sqw_qc)\n",
@@ -161,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "21de9dc4",
    "metadata": {},
    "outputs": [
@@ -169,14 +186,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating S(q,w) with Gaussian Approximation model (q = 1.63 1/Ang)...\n",
+      "Calculating S(q,w) with Gaussian Approximation model (q = 1.63 1/Ang)...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...calculating q = 1.63...\n",
       "S(q,w) GA result for q = 1.63 calculation completed.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7537b6ae608a4d3c9bccf4a43f4fd782",
+       "model_id": "a8be7247e008411eadfc6d3efe711bc3",
        "version_major": 2,
        "version_minor": 0
       },
